# msm_conditioning

./: .gitignore  README.md  pyproject.toml
diagnostics/: committor_error_new_states.py  condition_number_of_sampling_measure.py  diagnostics_utils.py  error_estimator_utils.py  mb_reference_committor.py  mfpt_error_new_states.py  potentials.py
diagnostics/double_well/: committor_error_of_temperature_and_potential_steepness.py  plot_errors.py
diagnostics/mueller_brown/: mb_diagn_blocks.py  mb_diagn_pipeline_committor.py  mb_diagn_pipeline_mfpt.py  plot_exp_results.py
diagnostics/mueller_brown/error_bounds/: mb_plot_error_bounds.py  mb_verify_error_bounds.py
diagnostics/triple_well/: 1D_triple_well_diagnostics.py
docs/: conf.py  index.rst
docs/api/: index.rst  msm.rst  traj_utils.rst
src/msm_playground/: condition_numbers_utils.py  course_graining.py  grid_based_reference.py  matplotlib_loader.py  msm.py  numba_sampler.py  sampler.py  traj_utils.py
src/msm_playground/clustering/: abstract_clustering.py  id_clustering.py  kmeans_clustering.py  uniform_clustering.py  ward_clustering.py
