[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
   { name = "Yehor Tuchkov, Erik Thiede", email = "ytuchkov@students.uni-mainz.de"},
]
name = "msm_playground"
version = "0.0.1"
dependencies = [
    "numpy",
    "matplotlib",
    "cycler",
    "numba",
    "pyemma",
    "scipy",
    "scikit-learn",
]
